PresenceExercise/PresenceExercise/src/objects/Payment__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Paid__c</fullName>
        <label>Date Paid</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Payment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>